# tg-bot-photohost

./: Dockerfile  README.md  bot_main.py  flask_app.py  pyproject.toml  setup.cfg
bot/: commands.py  config.py  menu.py  processors.py  states.py  utils.py
infra/: docker-compose.yaml
templates/: photos.html  view_photos.html
